# python-tado

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  README.md  package-lock.json  package.json  pyproject.toml  readthedocs.yaml  sonar-project.properties
.devcontainer/: Containerfile  devcontainer.json  launch.json
.github/: CODEOWNERS  CONTRIBUTING.md  LICENSE.md
.github/workflows/: deploy-docs.yaml  linting.yaml  release-test.yaml  release.yaml  tests.yaml  typing.yaml
docs/: __init__.py  conf.py  index.md  usage.md
docs/.vitepress/: config.mts
docs/source/: __init__.py  api.rst  conf.py  index.rst  models.rst  usage.rst
examples/: __init__.py  example.py
scripts/: generate_docs.py
src/python_tado_async/: __init__.py  const.py  models.py  python_tado_async.py
src/python_tado_ha/: __init__.py  models.py  python_tado_ha.py
src/tado/: __init__.py  const.py  exceptions.py  models.py  tado.py
src/tadoasync/: __init__.py  api_v3.py  api_x.py  const.py  exceptions.py  models.py  models_unified.py  models_v3.py  models_x.py  tadoasync.py  unifier.py
tests/: __init__.py  conftest.py  const.py  ruff.toml  syrupy.py  test_models_unified.py  test_tado.py  test_tado_v3.py  test_tado_x.py  test_unifier.py
tests/__snapshots__/: test_models_unified.ambr  test_tado.ambr  test_tado_v3.ambr  test_tado_x.ambr
tests/fixtures/: auth_token.txt  capabilities.json  capabilities_ac_new.json  capabilities_water_heater.json  device_info.json  devices.json  home_state.json  home_v3.json  home_x.json  home_x_hops.json  me.json  mobile_devices.json  refresh_token.json  weather.json  zone_states.json  zone_states_ac_power.dry.json  zone_states_ac_power.fan.json  zones.json  zones_no_owd.json
tests/fixtures/LINE_X/: roomsAndDevices.json
tests/fixtures/zone_state/: ac_issue_32294.heat_mode.json  smartac3.auto_mode.json  smartac3.cool_mode.json  smartac3.dry_mode.json  smartac3.fan_mode.json  smartac3.heat_mode.json  smartac3.manual_off.json  smartac3.smart_mode.json  tadov2.heating.manual_mode_no_mode.json  tadov2.heating.manual_mode_no_termination.json  tadov2.heating.off_mode.json  tadov2.home_state.auto_not_supported.json  tadov2.home_state.auto_supported.auto_mode.json  tadov2.home_state.auto_supported.manual_mode.json
