[project]
name = "tadoasync"
version = "0.2.2"
description = "Asynchronous Python client for controlling Tado devices."
authors = [{ name = "Erwin Douna", email = "e.douna@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Erwin Douna", email = "e.douna@gmail.com" }]
keywords = [
    "tado",
    "homeassistant",
    "api",
    "async",
    "client",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.0.0",
    "mashumaro>=3.10",
    "orjson>=3.9.8",
    "yarl>=1.6.0",
    "aioresponses>=0.7.7,<0.8",
    "pyjwt>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/erwindouna/python-tado"
Repository = "https://github.com/erwindouna/python-tado"
Documentation = "https://github.com/erwindouna/python-tado"
"Bug Tracker" = "https://github.com/erwindouna/python-tado/issues"
Changelog = "https://github.com/erwindouna/python-tado/releases"

[dependency-groups]
dev = [
    "aresponses==3.0.0",
    "codespell==2.2.6",
    "covdefaults==2.3.0",
    "coverage[toml]==7.4.3",
    "mypy==1.9.0",
    "prek",
    "pylint==3.0.3",
    "pytest==8.1.1",
    "pytest-asyncio>=0.23.5.post1,<0.24",
    "pytest-cov==4.1.0",
    "ruff==0.1.13",
    "safety==3.0.1",
    "yamllint==1.33.0",
    "syrupy==4.6.1",
    "deptry>=0.19.1,<0.20",
]

[tool.hatch.build.targets.sdist]
include = ["src/tadoasync"]

[tool.hatch.build.targets.wheel]
include = ["src/tadoasync"]

[tool.hatch.build.targets.wheel.sources]
"src/tadoasync" = "tadoasync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["tadoasync"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.12"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Per-module overrides for libraries without type stubs
[[tool.mypy.overrides]]
module = "mashumaro.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "syrupy"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aresponses"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tadoasync.models"
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "tadoasync.tadoasync"
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
ignore_errors = true

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = ["duplicate-code", "format", "unsubscriptable-object", "no-member", "too-many-arguments", "protected-access", "invalid-name", "wrong-import-order", "too-many-statements", "too-many-public-methods", "too-many-instance-attributes", "redefined-builtin", "import-error"]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
[tool.ruff.lint]
ignore = [
  "ANN101",  # Self... explanatory
  "ANN102",  # cls... just as useless
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "ARG002",  # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748
  "TRY003",  # Avoid specifying long messages outside the exception class
  "EM101",   # Exception must not use a string literal, assign to variable first
  "EM102",   # Exception must not use an f-string literal, assign to variable first
  "PLR0913", # Too many arguments in function definition
  "N815",    # Scope should not be mixedCase
  "PLR0912", # Too many branches
  "PLR0915", # Too many statements
  "C901",    # Too complex

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["tado"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "mashumaro.mixins.orjson.DataClassORJSONMixin",
]

[tool.ruff.lint.mccabe]
max-complexity = 25
